--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,6 @@
     <title>Rafael G. Ribeiro</title>
 </head>
 <body>
-    <h1>Apenas reservando a URL</h1>    
+    <h1>Apenas reservando o domínio</h1>    
 </body>
 </html>
