criando primeira tela

--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rafael G. Ribeiro</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Abel&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/main.scss">
 </head>
 <body>
-    <h1>Apenas reservando o domínio</h1>    
+    <div class="container">
+        <div class="navbar"></div>
+        <div class="content_box">
+            <h2 class="upTitle">Olá, pessoas! Meu nome é</h2>
+            <h1 class="mainTitle">Rafael G. Ribeiro</h1>
+            <p class="description">"Sou programador júnior, motociclista e ex nômade. Você pode ver mais sobre mim na navbar acima, mas já que está por aqui, que tal dar uma olhadinha em alguns dos meus projetos?"</p>
+            <div class="btn_box">
+                <button type="button" class="btn outros">Projetos diversos</button>
+                <button type="button" class="btn destaque">Projeto destaque</button>
+            </div>
+        </div>
+    </div> 
 </body>
+<script src="scripts/main.js"></script>
 </html>
