melhorando design inicial e iniciando o desenvolvimento da segunda tela

--- a/src/index.html
+++ b/src/index.html
@@ -11,11 +11,19 @@
 </head>
 <body>
     <div class="container">
-        <div class="navbar"></div>
-        <div class="content_box">
+        <div class="content_box" id="contentBox2">
             <h2 class="upTitle">Olá, pessoas! Meu nome é</h2>
             <h1 class="mainTitle">Rafael G. Ribeiro</h1>
-            <p class="description">"Sou programador júnior, motociclista e ex nômade. Você pode ver mais sobre mim na navbar acima, mas já que está por aqui, que tal dar uma olhadinha em alguns dos meus projetos?"</p>
+            <p class="description">"Sou programador júnior, motociclista e ex nômade. Você pode ver mais sobre mim clicando <strong id="aqui">aqui</strong>, e estando nessa page, que tal dar uma olhadinha em alguns dos meus projetos?"</p>
+            <div class="btn_box">
+                <button type="button" class="btn outros">Projetos diversos</button>
+                <button type="button" class="btn destaque">Projeto destaque</button>
+            </div>
+        </div>
+        <div class="content_box hidden" id="contentBox2">
+            <h2 class="upTitle">Olá, ola ola</h2>
+            <h1 class="mainTitle">Rafaeeeeeeeeeeeeeeeeel</h1>
+            <p class="description">"Sou programador júnior, motociclista e ex nômade. Você pode ver mais sobre mim clicando <strong id="aqui">aqui</strong>, e estando nessa page, que tal dar uma olhadinha em alguns dos meus projetos?"</p>
             <div class="btn_box">
                 <button type="button" class="btn outros">Projetos diversos</button>
                 <button type="button" class="btn destaque">Projeto destaque</button>
