--- a/src/index.html
+++ b/src/index.html
@@ -11,13 +11,15 @@
 </head>
 <body>
     <div class="container">
-        <div class="content_box landing" id="contentBox1">
+        <div class="content_box landing hidden" id="contentBox1">
             <h2 class="upTitle">Olá, pessoas! Meu nome é</h2>
             <h1 class="mainTitle">Rafael G. Ribeiro</h1>
-            <p class="description">"Sou programador júnior, motociclista e ex nômade. Você pode ver mais sobre mim clicando <strong id="aqui">AQUI</strong>, e estando nessa page, que tal dar uma olhadinha em alguns dos meus projetos?"</p>
+            <p class="description">"Sou programador júnior, motociclista e ex nômade. Você pode ver mais sobre mim clicando <strong id="aqui">AQUI</strong>. Agora, estando nessa page, que tal dar uma olhada em alguns dos meus projetos?"</p>
             <div class="btn_box">
                 <button type="button" class="btn outros">Projetos diversos</button>
-                <button type="button" class="btn destaque">Projeto destaque</button>
+                <button type="button" class="btn destaque">
+                    <a href="https://uivos-e-sussurros.vercel.app/" target="_blank">Projeto destaque</a>
+                </button>
             </div>
         </div>
         <div class="content_box sobreMim hidden" id="contentBox2">
@@ -27,6 +29,45 @@
                 <p class="description">Em 2020 comecei uma viagem de um ano e meio pelo Brasil, de carona e de moto, do RS ao AM. Foi um período de grande crescimento pessoal e desenvolvimento de softskills graças aos desafios, conexões humanas e funções diversas que desempenhei.</p>
                 <p class="description">Hoje estudo programação pela EBAC; por conta própria buscando informações na internet; e criando projetos próprios.</p>
                 <p class="description">Como pessoa eu me descreveria sendo alguém pró-ativo, criativo, tranquilo, que curte trabalhos em equipe e é amante da filosofia, da tecnologia e da natureza.</p>
+            </div>
+            <div class="btn_box">
+                <button type="button" class="btn" id="voltar">Voltar</button>
+            </div>
+        </div>
+        <div class="content_box projetos" id="contentBox3">
+            <h2 class="upTitle">Projetos diversos</h2>
+            <div class="projects_box">
+                <div class="projeto">
+                    <a href="https://clone-disneyplus-wuhn.vercel.app/">
+                        <img src="img/disneyClone.jpeg" alt="Clone do site da Disney de 2020">
+                    </a>
+                    <p class="description">Clone do site da Disney feito como projeto proposto nas aulas.</p>
+                </div>
+                <div class="projeto">
+                    <a href="https://clone-disneyplus-wuhn.vercel.app/">
+                        <img src="img/disneyClone.jpeg" alt="Clone do site da Disney de 2020">
+                    </a>
+                    <p class="description">Clone do site da Disney feito como projeto proposto nas aulas.</p>
+                </div>
+                <div class="projeto">
+                    <a href="https://clone-disneyplus-wuhn.vercel.app/">
+                        <img src="img/disneyClone.jpeg" alt="Clone do site da Disney de 2020">
+                    </a>
+                    <p class="description">Clone do site da Disney feito como projeto proposto nas aulas.</p>
+                </div>
+                <div class="projeto">
+                    <a href="https://clone-disneyplus-wuhn.vercel.app/">
+                        <img src="img/disneyClone.jpeg" alt="Clone do site da Disney de 2020">
+                    </a>
+                    <p class="description">Clone do site da Disney feito como projeto proposto nas aulas.</p>
+                </div>
+                <div class="projeto">
+                    <a href="https://clone-disneyplus-wuhn.vercel.app/">
+                        <img src="img/disneyClone.jpeg" alt="Clone do site da Disney de 2020">
+                    </a>
+                    <p class="description">Clone do site da Disney feito como projeto proposto nas aulas.</p>
+                </div>
+                
             </div>
             <div class="btn_box">
                 <button type="button" class="btn" id="voltar">Voltar</button>
