configurando a tela de projetos

--- a/src/index.html
+++ b/src/index.html
@@ -11,12 +11,12 @@
 </head>
 <body>
     <div class="container">
-        <div class="content_box landing hidden" id="contentBox1">
+        <div class="content_box landing" id="contentBox1">
             <h2 class="upTitle">Olá, pessoas! Meu nome é</h2>
             <h1 class="mainTitle">Rafael G. Ribeiro</h1>
             <p class="description">"Sou programador júnior, motociclista e ex nômade. Você pode ver mais sobre mim clicando <strong id="aqui">AQUI</strong>. Agora, estando nessa page, que tal dar uma olhada em alguns dos meus projetos?"</p>
             <div class="btn_box">
-                <button type="button" class="btn outros">Projetos diversos</button>
+                <button type="button" class="btn outros" id="diversos">Projetos diversos</button>
                 <button type="button" class="btn destaque">
                     <a href="https://uivos-e-sussurros.vercel.app/" target="_blank">Projeto destaque</a>
                 </button>
@@ -34,43 +34,36 @@
                 <button type="button" class="btn" id="voltar">Voltar</button>
             </div>
         </div>
-        <div class="content_box projetos" id="contentBox3">
+        <div class="content_box projetos hidden2" id="contentBox3">
             <h2 class="upTitle">Projetos diversos</h2>
             <div class="projects_box">
                 <div class="projeto">
-                    <a href="https://clone-disneyplus-wuhn.vercel.app/">
-                        <img src="img/disneyClone.jpeg" alt="Clone do site da Disney de 2020">
+                    <a href="https://uivos-e-sussurros.vercel.app/" target="_blank">
+                        <img src="img/UivosESussurros.jpg" alt="Rolê de aniversário">
+                        <p class="description">Game de cartas em JS com ambientação de suspense e terror.</p>
                     </a>
-                    <p class="description">Clone do site da Disney feito como projeto proposto nas aulas.</p>
                 </div>
                 <div class="projeto">
-                    <a href="https://clone-disneyplus-wuhn.vercel.app/">
-                        <img src="img/disneyClone.jpeg" alt="Clone do site da Disney de 2020">
+                    <a href="https://clone-disneyplus-wuhn.vercel.app/" target="_blank">
+                        <img src="img/disneyClone.jpg" alt="Clone do site da Disney de 2020">
+                        <p class="description">Clone do site da Disney feito como projeto proposto em aula.</p>
                     </a>
-                    <p class="description">Clone do site da Disney feito como projeto proposto nas aulas.</p>
                 </div>
                 <div class="projeto">
-                    <a href="https://clone-disneyplus-wuhn.vercel.app/">
-                        <img src="img/disneyClone.jpeg" alt="Clone do site da Disney de 2020">
+                    <a href="https://role-de-aniversario-exercicio.vercel.app/" target="_blank">
+                        <img src="img/roleAniversario.jpg" alt="Rolê de aniversário">
+                        <p class="description">Site estilo landing page para evento com contador do tempo restante.</p>
                     </a>
-                    <p class="description">Clone do site da Disney feito como projeto proposto nas aulas.</p>
                 </div>
                 <div class="projeto">
-                    <a href="https://clone-disneyplus-wuhn.vercel.app/">
-                        <img src="img/disneyClone.jpeg" alt="Clone do site da Disney de 2020">
+                    <a href="https://random-pokemon-picker-mauve.vercel.app/" target="_blank">
+                        <img src="img/pokemon.jpg" alt="Page de anotações e estudos hover CSS">
+                        <p class="description">"Gerador de Pokémon" feito como prática do uso de APIs.</p>
                     </a>
-                    <p class="description">Clone do site da Disney feito como projeto proposto nas aulas.</p>
                 </div>
-                <div class="projeto">
-                    <a href="https://clone-disneyplus-wuhn.vercel.app/">
-                        <img src="img/disneyClone.jpeg" alt="Clone do site da Disney de 2020">
-                    </a>
-                    <p class="description">Clone do site da Disney feito como projeto proposto nas aulas.</p>
-                </div>
-                
             </div>
             <div class="btn_box">
-                <button type="button" class="btn" id="voltar">Voltar</button>
+                <button type="button" class="btn" id="voltar2">Voltar</button>
             </div>
         </div>
     </div> 
