realizando pequenas alterações no display

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
         <div class="content_box landing" id="contentBox1">
             <h2 class="upTitle">Olá, pessoas! Meu nome é</h2>
             <h1 class="mainTitle">Rafael G. Ribeiro</h1>
-            <p class="description">"Sou programador júnior, motociclista e ex nômade. Você pode ver mais sobre mim clicando <strong id="aqui">AQUI</strong>. Agora, estando nessa page, que tal dar uma olhada em alguns dos meus projetos?"</p>
+            <p class="description">"Sou programador júnior, motociclista e ex nômade. Você pode <strong id="aqui">ver mais sobre mim clicando AQUI</strong>. Agora, estando nessa page, que tal dar uma olhada em alguns dos meus projetos?"</p>
             <div class="btn_box">
                 <button type="button" class="btn outros" id="diversos">Projetos diversos</button>
                 <button type="button" class="btn destaque">
@@ -27,7 +27,7 @@
             <div class="description_box">
                 <p class="description">Aos 14 anos trabalhei com TI na área de suporte, mas acabei mudando de área algumas vezes durante os anos seguintes.</p>
                 <p class="description">Em 2020 comecei uma viagem de um ano e meio pelo Brasil, de carona e de moto, do RS ao AM. Foi um período de grande crescimento pessoal e desenvolvimento de softskills graças aos desafios, conexões humanas e funções diversas que desempenhei.</p>
-                <p class="description">Hoje estudo programação pela EBAC; por conta própria buscando informações na internet; e criando projetos próprios.</p>
+                <p class="description">Hoje, pós viagem e assimilações, decidi pela carreira de dev. Estudo programação pela EBAC; por conta própria buscando informações na internet; e criando projetos próprios.</p>
                 <p class="description">Como pessoa eu me descreveria sendo alguém pró-ativo, criativo, tranquilo, que curte trabalhos em equipe e é amante da filosofia, da tecnologia e da natureza.</p>
             </div>
             <div class="btn_box">
