alterando favicon e título

--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,9 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="img/favicon2.png" type="image/x-icon">
+    <link rel="icon" href="img/favicon1.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rafael G. Ribeiro</title>
+    <title>Raffa FS</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Abel&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
