adicionando projetos e barra lateral e atualizando design botões e textos

--- a/src/index.html
+++ b/src/index.html
@@ -13,13 +13,13 @@
 <body>
     <div class="container">
         <div class="content_box landing" id="contentBox1">
-            <h2 class="upTitle">Olá, pessoas! Meu nome é</h2>
+            <h2 class="upTitle">E aí, Bora pro digital?</h2>
             <h1 class="mainTitle">Rafael G. Ribeiro</h1>
-            <p class="description">"Sou programador júnior, motociclista e ex nômade. Você pode <strong id="aqui">ver mais sobre mim clicando AQUI</strong>. Agora, estando nessa page, que tal dar uma olhada em alguns dos meus projetos?"</p>
+            <p class="description">"Crio as ferramentas que você precisa para estar no mundo digital! Com excelência e criatividade! Você pode <strong id="aqui">me conhecer melhor clicando AQUI</strong> ou ver meus projetos no botão abaixo!"</p>
             <div class="btn_box">
-                <button type="button" class="btn outros" id="diversos">Projetos diversos</button>
+                <button type="button" class="btn outros" id="diversos">Meus projetos</button>
                 <button type="button" class="btn destaque">
-                    <a href="https://uivos-e-sussurros.vercel.app/" target="_blank">Projeto destaque</a>
+                    <a href="https://wa.me/5547984020254/?text=Olá, Rafael, gostaria de saber mais sobre seu trabalho!" target="_blank">Fale comigo!</a>
                 </button>
             </div>
         </div>
@@ -28,7 +28,7 @@
             <div class="description_box">
                 <p class="description">Aos 14 anos trabalhei com TI na área de suporte, mas acabei mudando de área algumas vezes durante os anos seguintes.</p>
                 <p class="description">Em 2020 comecei uma viagem de um ano e meio pelo Brasil, de carona e de moto, do RS ao AM. Foi um período de grande crescimento pessoal e desenvolvimento de softskills graças aos desafios, conexões humanas e funções diversas que desempenhei.</p>
-                <p class="description">Hoje, pós viagem e assimilações, decidi pela carreira de dev. Estudo programação pela EBAC; por conta própria buscando informações na internet; e criando projetos próprios.</p>
+                <p class="description">Hoje, pós viagem e assimilações, decidi pela carreira de dev/programador. Já atuo na área e continuo estudando pela EBAC; por conta própria na internet; e criando projetos próprios.</p>
                 <p class="description">Como pessoa eu me descreveria sendo alguém pró-ativo, criativo, tranquilo, que curte trabalhos em equipe e é amante da filosofia, da tecnologia e da natureza.</p>
             </div>
             <div class="btn_box">
@@ -36,12 +36,18 @@
             </div>
         </div>
         <div class="content_box projetos hidden2" id="contentBox3">
-            <h2 class="upTitle">Projetos diversos</h2>
+            <h2 class="upTitle">Meus Projetos</h2>
             <div class="projects_box">
                 <div class="projeto">
                     <a href="https://uivos-e-sussurros.vercel.app/" target="_blank">
-                        <img src="img/UivosESussurros.jpg" alt="Rolê de aniversário">
-                        <p class="description">Game de cartas em JS com ambientação de suspense e terror.</p>
+                        <img src="img/UivosESussurros.jpg" alt="Uivos e Sussurros Card Game">
+                        <p class="description">Game de cartas em JS Vanilla com ambientação de suspense e terror.</p>
+                    </a>
+                </div>
+                <div class="projeto">
+                    <a href="https://oficial-lanches.vercel.app/" target="_blank">
+                        <img src="img/ofcLanches.jpg" alt="Oficial Lanches">
+                        <p class="description">Page de cardápio em React com captação de itens e dados para delivery.</p>
                     </a>
                 </div>
                 <div class="projeto">
@@ -51,15 +57,21 @@
                     </a>
                 </div>
                 <div class="projeto">
-                    <a href="https://role-de-aniversario-exercicio.vercel.app/" target="_blank">
-                        <img src="img/roleAniversario.jpg" alt="Rolê de aniversário">
-                        <p class="description">Site estilo landing page para evento com contador do tempo restante.</p>
+                    <a href="https://calc-imc-three.vercel.app/" target="_blank">
+                        <img src="img/imc.jpg" alt="Calculadora IMC">
+                        <p class="description">Calculadora IMC com design e funções interativas em React</p>
                     </a>
                 </div>
                 <div class="projeto">
                     <a href="https://random-pokemon-picker-mauve.vercel.app/" target="_blank">
-                        <img src="img/pokemon.jpg" alt="Page de anotações e estudos hover CSS">
+                        <img src="img/pokemon.jpg" alt="Gerador de pokemon">
                         <p class="description">"Gerador de Pokémon" feito como prática do uso de APIs.</p>
+                    </a>
+                </div>
+                <div class="projeto">
+                    <a href="https://role-de-aniversario-exercicio.vercel.app/" target="_blank">
+                        <img src="img/roleAniversario.jpg" alt="Rolê de aniversário">
+                        <p class="description">Site estilo landing page para evento com contador do tempo restante.</p>
                     </a>
                 </div>
             </div>
