primeiro commit, estrutura template, alterando os textos principais

--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,9 @@
 <body>
     <div class="container">
         <div class="content_box landing" id="contentBox1">
-            <h2 class="upTitle">E aí, Bora pro digital?</h2>
-            <h1 class="mainTitle">Rafael G. Ribeiro</h1>
-            <p class="description">"Crio as ferramentas que você precisa para estar no mundo digital! Com excelência e criatividade! Você pode <strong id="aqui">me conhecer melhor clicando AQUI</strong> ou ver meus projetos no botão abaixo!"</p>
+            <h2 class="upTitle">Vamos cuidar das unhas?</h2>
+            <h1 class="mainTitle">Barbara Pamela</h1>
+            <p class="description">"Manicure de excelência! Cuido das suas unhas e de você, pois unhas bem feitas elevam sua autoestima! Você pode <strong id="aqui">me conhecer melhor clicando AQUI</strong> ou conferir meus trabalhos no botão abaixo!"</p>
             <div class="btn_box">
                 <button type="button" class="btn outros" id="diversos">Meus projetos</button>
                 <button type="button" class="btn destaque">
@@ -24,12 +24,13 @@
             </div>
         </div>
         <div class="content_box sobreMim hidden" id="contentBox2">
-            <h2 class="upTitle">Sobre a minha jornada</h2>
+            <h2 class="upTitle">Um pouquinho sobre mim</h2>
             <div class="description_box">
-                <p class="description">Aos 14 anos trabalhei com TI na área de suporte, mas acabei mudando de área algumas vezes durante os anos seguintes.</p>
-                <p class="description">Em 2020 comecei uma viagem de um ano e meio pelo Brasil, de carona e de moto, do RS ao AM. Foi um período de grande crescimento pessoal e desenvolvimento de softskills graças aos desafios, conexões humanas e funções diversas que desempenhei.</p>
-                <p class="description">Hoje, pós viagem e assimilações, decidi pela carreira de dev/programador. Já atuo na área e continuo estudando pela EBAC; por conta própria na internet; e criando projetos próprios.</p>
-                <p class="description">Como pessoa eu me descreveria sendo alguém pró-ativo, criativo, tranquilo, que curte trabalhos em equipe e é amante da filosofia, da tecnologia e da natureza.</p>
+                <p class="description">Desde muito cedo eu já tinha o desejo de ser manicure, desde quando vi minha mãe fazendo suas unhas!</p>
+                <p class="description">Aos 14 anos fiz meu primeiro curso, onde obtive muito conhecimento teórico e prático sobre higienização e preparação, cuticulagem, esmaltação e cuidados gerais das unhas.</p>
+                <p class="description">Logo já comecei a atuar na área, atendendo a domicílio. De bicicleta eu ia até a casa das minhas clientes levando todos os meus esmaltes e minhas ferramentas em uma mochila simples.</p>
+                <p class="description">Meu gosto pela área sempre se manteve, e em 2025 realizei um curso particular de especialização em esmaltação em gel para melhor atender as minhas clientes.</p>
+                <p class="description">Dizem que sou uma pessoa gentil, criativa e dedicada. Amo viajar e estar com a família, amigos e meus gatinhos, ou fazendo algum tipo de arte! ^^</p>
             </div>
             <div class="btn_box">
                 <button type="button" class="btn" id="voltar">Voltar</button>
