estilizando e adicionando botões

--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <link rel="icon" href="img/favicon3.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Raffa FS</title>
+    <title>Babi Nails</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Abel&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Dosis:wght@200..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/main.scss">
 </head>
 <body>
@@ -19,7 +19,7 @@
             <div class="btn_box">
                 <button type="button" class="btn outros" id="diversos">Meus projetos</button>
                 <button type="button" class="btn destaque">
-                    <a href="https://wa.me/5547984020254/?text=Olá, Rafael, gostaria de saber mais sobre seu trabalho!" target="_blank">Fale comigo!</a>
+                    <a href="https://wa.me/5547991974121/?text=Olá, Babi, gostaria de marcar minhas unhas contigo!" target="_blank">Fale comigo!</a>
                 </button>
             </div>
         </div>
@@ -27,13 +27,15 @@
             <h2 class="upTitle">Um pouquinho sobre mim</h2>
             <div class="description_box">
                 <p class="description">Desde muito cedo eu já tinha o desejo de ser manicure, desde quando vi minha mãe fazendo suas unhas!</p>
-                <p class="description">Aos 14 anos fiz meu primeiro curso, onde obtive muito conhecimento teórico e prático sobre higienização e preparação, cuticulagem, esmaltação e cuidados gerais das unhas.</p>
-                <p class="description">Logo já comecei a atuar na área, atendendo a domicílio. De bicicleta eu ia até a casa das minhas clientes levando todos os meus esmaltes e minhas ferramentas em uma mochila simples.</p>
-                <p class="description">Meu gosto pela área sempre se manteve, e em 2025 realizei um curso particular de especialização em esmaltação em gel para melhor atender as minhas clientes.</p>
-                <p class="description">Dizem que sou uma pessoa gentil, criativa e dedicada. Amo viajar e estar com a família, amigos e meus gatinhos, ou fazendo algum tipo de arte! ^^</p>
+                <p class="description">Aos 14 anos fiz meu primeiro curso de manicure, obtendo bastante conhecimento teórico e prático ná area.</p>
+                <p class="description">Comecei atendendo a domicílio. De bicicleta eu ia até as minhas clientes com meus esmaltes e ferramentas em uma mochila simples. Meu gosto pela área sempre se manteve, e em 2025 realizei um curso de especialização em esmaltação em gel para melhor atender as minhas clientes.</p>
+                <p class="description">Dizem que sou uma pessoa gentil, criativa e dedicada. Amo viajar e estar com a família, amigos e com meus gatinhos, ou fazendo algum tipo de arte! ^^</p>
             </div>
             <div class="btn_box">
                 <button type="button" class="btn" id="voltar">Voltar</button>
+                <button type="button" class="btn destaque">
+                    <a href="https://wa.me/5547999312182/?text=Olá, Morgana, gostaria de saber mais sobre seu trabalho!" target="_blank">Fale comigo!</a>
+                </button>
             </div>
         </div>
         <div class="content_box projetos hidden2" id="contentBox3">
@@ -78,6 +80,9 @@
             </div>
             <div class="btn_box">
                 <button type="button" class="btn" id="voltar2">Voltar</button>
+                <button type="button" class="btn destaque">
+                    <a href="https://wa.me/5547999312182/?text=Olá, Morgana, gostaria de saber mais sobre seu trabalho!" target="_blank">Fale comigo!</a>
+                </button>
             </div>
         </div>
     </div> 
