adicionando imagens e estilizando

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="img/favicon3.png" type="image/x-icon">
+    <link rel="icon" href="img/favicon.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Babi Nails</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,7 +17,7 @@
             <h1 class="mainTitle">Barbara Pamela</h1>
             <p class="description">"Manicure de excelência! Cuido das suas unhas e de você, pois unhas bem feitas elevam sua autoestima! Você pode <strong id="aqui">me conhecer melhor clicando AQUI</strong> ou conferir meus trabalhos no botão abaixo!"</p>
             <div class="btn_box">
-                <button type="button" class="btn outros" id="diversos">Meus projetos</button>
+                <button type="button" class="btn outros" id="diversos">Meus trabalhos</button>
                 <button type="button" class="btn destaque">
                     <a href="https://wa.me/5547991974121/?text=Olá, Babi, gostaria de marcar minhas unhas contigo!" target="_blank">Fale comigo!</a>
                 </button>
@@ -39,43 +39,31 @@
             </div>
         </div>
         <div class="content_box projetos hidden2" id="contentBox3">
-            <h2 class="upTitle">Meus Projetos</h2>
+            <h2 class="upTitle">Meus trabalhos</h2>
             <div class="projects_box">
                 <div class="projeto">
-                    <a href="https://uivos-e-sussurros.vercel.app/" target="_blank">
-                        <img src="img/UivosESussurros.jpg" alt="Uivos e Sussurros Card Game">
-                        <p class="description">Game de cartas em JS Vanilla com ambientação de suspense e terror.</p>
-                    </a>
+                    <img src="img/unhas/unha4.jpg" alt="unhas">
                 </div>
                 <div class="projeto">
-                    <a href="https://oficial-lanches.vercel.app/" target="_blank">
-                        <img src="img/ofcLanches.jpg" alt="Oficial Lanches">
-                        <p class="description">Page de cardápio em React com captação de itens e dados para delivery.</p>
-                    </a>
+                    <img src="img/unhas/unha2.jpg" alt="unhas">
                 </div>
                 <div class="projeto">
-                    <a href="https://clone-disneyplus-wuhn.vercel.app/" target="_blank">
-                        <img src="img/disneyClone.jpg" alt="Clone do site da Disney de 2020">
-                        <p class="description">Clone do site da Disney feito como projeto proposto em aula.</p>
-                    </a>
+                    <img src="img/unhas/unha5.jpg" alt="unhas">
                 </div>
                 <div class="projeto">
-                    <a href="https://calc-imc-three.vercel.app/" target="_blank">
-                        <img src="img/imc.jpg" alt="Calculadora IMC">
-                        <p class="description">Calculadora IMC com design e funções interativas em React</p>
-                    </a>
+                    <img src="img/unhas/unha3.jpg" alt="unhas">
                 </div>
                 <div class="projeto">
-                    <a href="https://random-pokemon-picker-mauve.vercel.app/" target="_blank">
-                        <img src="img/pokemon.jpg" alt="Gerador de pokemon">
-                        <p class="description">"Gerador de Pokémon" feito como prática do uso de APIs.</p>
-                    </a>
+                    <img src="img/unhas/unha6.jpg" alt="unhas">
                 </div>
                 <div class="projeto">
-                    <a href="https://role-de-aniversario-exercicio.vercel.app/" target="_blank">
-                        <img src="img/roleAniversario.jpg" alt="Rolê de aniversário">
-                        <p class="description">Site estilo landing page para evento com contador do tempo restante.</p>
-                    </a>
+                    <img src="img/unhas/unha7.jpg" alt="unhas">
+                </div>
+                <div class="projeto">
+                    <img src="img/unhas/unha1.jpg" alt="unhas">
+                </div>
+                <div class="projeto">
+                    <img src="img/unhas/unha8.jpg" alt="unhas">
                 </div>
             </div>
             <div class="btn_box">
