adicionando imagem background, favicon, estilização e textos

--- a/src/index.html
+++ b/src/index.html
@@ -6,29 +6,29 @@
     <title>Voss no Mundo</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Dosis:wght@200..800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Abel&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/main.scss">
 </head>
 <body>
     <div class="container">
         <div class="content_box landing" id="contentBox1">
-            <h2 class="upTitle">Vamos cuidar das unhas?</h2>
-            <h1 class="mainTitle">Barbara Pamela</h1>
-            <p class="description">"Manicure de excelência! Cuido das suas unhas e de você, pois unhas bem feitas elevam sua autoestima! Você pode <strong id="aqui">me conhecer melhor clicando AQUI</strong> ou conferir meus trabalhos no botão abaixo!"</p>
+            <h2 class="upTitle">EU SOU A VOZ...</h2>
+            <h1 class="mainTitle">Morgana Voss</h1>
+            <p class="description">"EU SOU A VOZ... Que te orienta, que te acalma, que te guia... Que você pode confiar.<br><strong id="aqui">Me conheça melhor clicando AQUI</strong>. Eu ajudo você a encontrar a sua frequência e acessar as dimensões!"</p>
             <div class="btn_box">
-                <button type="button" class="btn outros" id="diversos">Meus trabalhos</button>
+                <button type="button" class="btn outros" id="diversos">Depoimentos</button>
                 <button type="button" class="btn destaque">
-                    <a href="https://wa.me/5547991974121/?text=Olá, Babi, gostaria de marcar minhas unhas contigo!" target="_blank">Fale comigo!</a>
+                    <a href="https://wa.me/5547999312182/?text=Olá, Morgana, gostaria de saber mais sobre seu trabalho!" target="_blank">Fale comigo!</a>
                 </button>
             </div>
         </div>
         <div class="content_box sobreMim hidden" id="contentBox2">
-            <h2 class="upTitle">Um pouquinho sobre mim</h2>
+            <h2 class="upTitle">Sobre a minha jornada</h2>
             <div class="description_box">
-                <p class="description">Desde muito cedo eu já tinha o desejo de ser manicure, desde quando vi minha mãe fazendo suas unhas!</p>
-                <p class="description">Aos 14 anos fiz meu primeiro curso de manicure, obtendo bastante conhecimento teórico e prático ná area.</p>
-                <p class="description">Comecei atendendo a domicílio. De bicicleta eu ia até as minhas clientes com meus esmaltes e ferramentas em uma mochila simples. Meu gosto pela área sempre se manteve, e em 2025 realizei um curso de especialização em esmaltação em gel para melhor atender as minhas clientes.</p>
-                <p class="description">Dizem que sou uma pessoa gentil, criativa e dedicada. Amo viajar e estar com a família, amigos e com meus gatinhos, ou fazendo algum tipo de arte! ^^</p>
+                <p class="description">Sou Terapeuta 5D, Reikiana e apaixonada pelo auto conhecimento!</p>
+                <p class="description">Fui empresária no ramo da confecção, por 15 anos. Plantei e colhi muitos frutos, mas percebi que não era onde eu queria continuar atuando. Meu marido e eu adoecemos nesse período, enquanto encarávamos nossos próprios desafios e também ajudávamos outras pessoas.</p>
+                <p class="description">Chegou então o momento de nós buscarmos ajuda, e nessa busca foi onde me apaixonei por tudo que envolve o auto conhecimento e o aprimoramento pessoal</p>
+                <p class="description">Acredite! É possível SIM, ter uma vida leve e alegre! Eu já subi e desci a montanha e por isso posso te orientar e te guiar.</p>
             </div>
             <div class="btn_box">
                 <button type="button" class="btn" id="voltar">Voltar</button>
@@ -41,28 +41,20 @@
             <h2 class="upTitle">Meus trabalhos</h2>
             <div class="projects_box">
                 <div class="projeto">
-                    <img src="img/unhas/unha4.jpg" alt="unhas">
                 </div>
                 <div class="projeto">
-                    <img src="img/unhas/unha2.jpg" alt="unhas">
                 </div>
                 <div class="projeto">
-                    <img src="img/unhas/unha5.jpg" alt="unhas">
                 </div>
                 <div class="projeto">
-                    <img src="img/unhas/unha3.jpg" alt="unhas">
                 </div>
                 <div class="projeto">
-                    <img src="img/unhas/unha6.jpg" alt="unhas">
                 </div>
                 <div class="projeto">
-                    <img src="img/unhas/unha7.jpg" alt="unhas">
                 </div>
                 <div class="projeto">
-                    <img src="img/unhas/unha1.jpg" alt="unhas">
                 </div>
                 <div class="projeto">
-                    <img src="img/unhas/unha8.jpg" alt="unhas">
                 </div>
             </div>
             <div class="btn_box">
