--- a/src/index.html
+++ b/src/index.html
@@ -41,20 +41,22 @@
             <h2 class="upTitle">Meus trabalhos</h2>
             <div class="projects_box">
                 <div class="projeto">
+                    <video src="vid/video1.mp4" controls width="600"></video>
                 </div>
                 <div class="projeto">
+                    <video src="vid/video2.mp4" controls width="600"></video>
                 </div>
                 <div class="projeto">
+                    <video src="vid/video3.mp4" controls width="600"></video>
                 </div>
                 <div class="projeto">
+                    <img src="img/img1.jpg" alt="img1">
                 </div>
                 <div class="projeto">
+                    <img src="img/img2.jpg" alt="img2">
                 </div>
                 <div class="projeto">
-                </div>
-                <div class="projeto">
-                </div>
-                <div class="projeto">
+                    <img src="img/img3.jpg" alt="img3">
                 </div>
             </div>
             <div class="btn_box">
