alterando titulo terceira tela

--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
             </div>
         </div>
         <div class="content_box projetos hidden2" id="contentBox3">
-            <h2 class="upTitle">Meus trabalhos</h2>
+            <h2 class="upTitle">Depoimentos</h2>
             <div class="projects_box">
                 <div class="projeto">
                     <video src="vid/video1.mp4" controls width="600"></video>
