--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
             <h1 class="mainTitle">Morgana Voss</h1>
             <p class="description">"EU SOU A VOZ... Que te orienta, que te acalma, que te guia... Que você pode confiar.<br><strong id="aqui">Me conheça melhor clicando AQUI</strong>. Eu ajudo você a encontrar a sua frequência e acessar as dimensões!"</p>
             <div class="btn_box">
-                <button type="button" class="btn outros" id="diversos">Depoimentos</button>
+                <button type="button" class="btn outros" id="diversos">Atendimento</button>
                 <button type="button" class="btn destaque">
                     <a href="https://wa.me/5547999312182/?text=Olá, Morgana, gostaria de saber mais sobre seu trabalho!" target="_blank">Fale comigo!</a>
                 </button>
@@ -62,7 +62,7 @@
             <div class="btn_box">
                 <button type="button" class="btn" id="voltar2">Voltar</button>
                 <button type="button" class="btn destaque">
-                    <a href="https://wa.me/5547991974121/?text=Olá, Babi, gostaria de saber mais sobre seu trabalho!" target="_blank">Fale comigo!</a>
+                    <a href="https://wa.me/5547999312182/?text=Olá, Morgana, gostaria de saber mais sobre seu trabalho!" target="_blank">Fale comigo!</a>
                 </button>
             </div>
         </div>
