alterando botão inicial

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
             <h1 class="mainTitle">Morgana Voss</h1>
             <p class="description">"EU SOU A VOZ... Que te orienta, que te acalma, que te guia... Que você pode confiar.<br><strong id="aqui">Me conheça melhor clicando AQUI</strong>. Eu ajudo você a encontrar a sua frequência e acessar as dimensões!"</p>
             <div class="btn_box">
-                <button type="button" class="btn outros" id="diversos">Atendimento</button>
+                <button type="button" class="btn outros" id="diversos">Depoimentos</button>
                 <button type="button" class="btn destaque">
                     <a href="https://wa.me/5547999312182/?text=Olá, Morgana, gostaria de saber mais sobre seu trabalho!" target="_blank">Fale comigo!</a>
                 </button>
