adicionando terceira tela e configurando estrutura de botões entre telas

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
             <h1 class="mainTitle">Morgana Voss</h1>
             <p class="description">"EU SOU A VOZ... Que te orienta, que te acalma, que te guia... Que você pode confiar.<br><strong id="aqui">Me conheça melhor clicando AQUI</strong>. Eu ajudo você a encontrar a sua frequência e acessar as dimensões!"</p>
             <div class="btn_box">
-                <button type="button" class="btn outros" id="diversos">Depoimentos</button>
+                <button type="button" class="btn outros" id="diversos">Acesso Vertical</button>
                 <button type="button" class="btn destaque">
                     <a href="https://wa.me/5547999312182/?text=Olá, Morgana, gostaria de saber mais sobre seu trabalho!" target="_blank">Fale comigo!</a>
                 </button>
@@ -38,7 +38,22 @@
                 </button>
             </div>
         </div>
-        <div class="content_box projetos hidden2" id="contentBox3">
+        <div class="content_box sobreMim hidden" id="contentBox3">
+            <h2 class="upTitle">Sobre o Acesso vertical</h2>
+            <div class="description_box">
+                <p class="description">O Acesso Vertical é uma técnica inovadora que permite acessar frequências específicas para perceber e compreender traumas de maneira profunda. Essa abordagem possibilita um processo de cura contínua, já que, uma vez aprendida, a técnica pode ser aplicada de forma independente, sem a necessidade de um facilitador.</p>
+                <p class="description">O grande diferencial do Acesso Vertical é que ele utiliza apenas o seu próprio corpo, tornando-o completamente autossuficiente e livre de qualquer dependência externa.</p>
+                <p class="description">Além disso, a técnica pode ser repetida sempre que você sentir necessidade, permitindo que você participe ativamente do seu próprio processo de cura e acelere a sua biologia pessoal de forma natural e consciente.</p>
+            </div>
+            <div class="btn_box">
+                <button type="button" class="btn destaque">
+                    <a href="https://pay.kiwify.com.br/nx6z0Jx" target="_blank">Acessar a técnica!</a>
+                </button>
+                <button type="button" class="btn" id="depoimentos">Depoimentos</button>
+                <button type="button" class="btn" id="voltar2">Voltar</button>
+            </div>
+        </div>
+        <div class="content_box projetos hidden2" id="contentBox4">
             <h2 class="upTitle">Depoimentos</h2>
             <div class="projects_box">
                 <div class="projeto">
@@ -61,10 +76,10 @@
                 </div>
             </div>
             <div class="btn_box">
-                <button type="button" class="btn" id="voltar2">Voltar</button>
                 <button type="button" class="btn destaque">
-                    <a href="https://wa.me/5547999312182/?text=Olá, Morgana, gostaria de saber mais sobre seu trabalho!" target="_blank">Fale comigo!</a>
+                    <a href="https://pay.kiwify.com.br/nx6z0Jx" target="_blank">Acessar a técnica!</a>
                 </button>
+                <button type="button" class="btn" id="voltar3">Voltar</button>
             </div>
         </div>
     </div> 
